<resources>
    <string name="app_name">Manjaha</string>
    <string name="title_home">Home</string>
    <string name="title_pengumuman">Pengumuman</string>
    <string name="title_judul_beranda1">Baru Diupload</string>
    <string name="title_judul_beranda2">Pilih Kategori Buku</string>
    <string name="title_judul_beranda3">Komik</string>
    <string name="title_judul_beranda4">Pengembangan Diri</string>
    <string name="title_kategori">Kategori</string>
    <string name="title_keranjang">Keranjang</string>
    <string name="title_akun">Akun</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="search_hint">Cari Judul Buku</string>
    <string name="title_kategori2">Kategori Buku</string>
    <string name="title_keranjang2">Keranjang Saya</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profil_saya">Profil Saya</string>
    <string name="akun">Akun</string>
    <string name="ganti_password">Ganti Password</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="alamat">Alamat</string>
    <string name="toko">Toko</string>
    <string name="mulai_jual">Mulai Jual</string>
    <string name="toko_saya">Toko Saya</string>
    <string name="pengumuman">Pengumuman</string>
    <string name="buat_pengumuman">Buat Pengumuman</string>
    <string name="lainnya">Lainnya</string>
    <string name="tentang">Tentang</string>
    <string name="logout">Logout</string>
    <string name="masuk">Masuk</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi?</string>
    <string name="sudah_memiliki_akun">Sudah Memiliki Akun? </string>
    <string name="masuk_sekarang">Masuk Sekarang</string>
    <string name="daftar_sekarang">Masuk Sekarang</string>
    <string name="daftar">Daftar</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="kebijakan_privasi">Saya menyetujui Kebijakan Privasi serta Syarat Dan Ketentuan oleh Manjaha</string>

</resources>