<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#150922"
    android:gravity="center"
    android:padding="40dp"
    tools:context=".auth.RegisterActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/logo_new"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_1"
        app:cardCornerRadius="8dp"
        android:layout_below="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">
            <TextView
                android:id="@+id/tv_daftar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/daftar"
                android:fontFamily="@font/poppins"
                android:layout_marginTop="10dp"
                android:textColor="#7C3384"
                android:textSize="20sp"
                android:gravity="center"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_namalengkap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_margin="10dp"
                android:layout_below="@id/tv_daftar"
                android:minWidth="@dimen/custom_min_width"
                android:maxWidth="@dimen/custom_max_width"
                android:hint="@string/nama_lengkap">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_namalengkap"
                android:layout_margin="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:minWidth="@dimen/custom_min_width"
                android:maxWidth="@dimen/custom_max_width"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailSubject"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_katasandi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_email"
                android:layout_margin="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconMode="password_toggle"
                android:minWidth="@dimen/custom_min_width"
                android:maxWidth="@dimen/custom_max_width"
                android:hint="@string/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/checkbox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_below="@id/et_katasandi"/>
            <TextView
                android:id="@+id/tv_kebijakanprivasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kebijakan_privasi"
                android:layout_below="@+id/et_katasandi"
                android:textAlignment="textEnd"
                android:layout_margin="10dp"
                android:textColor="#7C3384"/>
            <Button
                android:id="@+id/btn_daftar"
                android:layout_width="180dp"
                android:layout_height="55dp"
                android:text="@string/daftar"
                android:layout_centerInParent="true"
                android:layout_below="@+id/tv_kebijakanprivasi"
                android:layout_marginBottom="10dp"/>
            <RelativeLayout
                android:id="@+id/rl_02"
                android:layout_below="@+id/btn_daftar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true">
                <TextView
                    android:id="@+id/tv_tanyaakun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sudah_memiliki_akun"/>
                <TextView
                    android:id="@+id/tv_masuksekarang"
                    android:layout_toRightOf="@id/tv_tanyaakun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/masuk_sekarang"
                    android:textColor="#7C3384"
                    android:textStyle="bold"
                    android:layout_marginLeft="2dp"/>
            </RelativeLayout>

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>