<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize"
    android:paddingBottom="20dp"
    tools:context=".ui.akun.Akun">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/nav_profilSaya"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/purple_container_baru"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:fontFamily="@font/poppins"
                android:text="@string/profil_saya"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/nav_profilSaya"
            android:padding="20dp"

            android:layout_marginBottom="?attr/actionBarSize"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:strokeWidth="1dp"
                app:strokeColor="@color/black"
                app:cardElevation="5dp"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image_profil"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="25dp"
                        android:src="@drawable/profil" />

                    <TextView
                        android:id="@+id/tv_name_profil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:layout_toRightOf="@+id/image_profil"
                        android:fontFamily="@font/poppins"
                        android:text="Hai, Yepta Zagarino Samosir"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_email_profil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_name_profil"
                        android:layout_marginLeft="115dp"
                        android:layout_marginTop="30dp"
                        android:fontFamily="@font/poppins"
                        android:text="yeptasamosir1906@gmail.com"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                app:cardElevation="5dp"
                app:layout_constraintTop_toBottomOf="@+id/cv_1">
                <RelativeLayout
                    android:id="@+id/rl_akun"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingBottom="12dp">
                    <TextView
                        android:id="@+id/tv_akun"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:text="@string/akun"/>

                    <TextView
                        android:id="@+id/tv_gantipassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:drawableEnd="@drawable/ic_chevronright"
                        android:layout_below="@+id/tv_akun"
                        android:text="@string/ganti_password"/>
                    <TextView
                        android:id="@+id/tv_editprofil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:drawableEnd="@drawable/ic_chevronright"
                        android:layout_below="@+id/tv_gantipassword"
                        android:text="@string/edit_profil"/>
                    <TextView
                        android:id="@+id/tv_alamat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:drawableEnd="@drawable/ic_chevronright"
                        android:layout_below="@+id/tv_editprofil"
                        android:text="@string/alamat"/>
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                app:cardElevation="5dp"
                app:layout_constraintTop_toBottomOf="@+id/cv_2">
                <RelativeLayout
                    android:id="@+id/rl_toko"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="12dp"
                    android:elevation="8dp">
                    <TextView
                        android:id="@+id/tv_toko"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:text="@string/toko"/>

                    <TextView
                        android:id="@+id/tv_mulaijual"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:drawableEnd="@drawable/ic_chevronright"
                        android:layout_below="@+id/tv_toko"
                        android:text="@string/mulai_jual"/>
                    <TextView
                        android:id="@+id/tv_tokosaya"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:drawableEnd="@drawable/ic_chevronright"
                        android:layout_below="@+id/tv_mulaijual"
                        android:text="@string/toko_saya"/>

                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                app:cardElevation="5dp"
                app:layout_constraintTop_toBottomOf="@+id/cv_3">
                <RelativeLayout
                    android:id="@+id/rl_pengumuman"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="12dp"
                    android:elevation="8dp">
                    <TextView
                        android:id="@+id/tv_pengumuman"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:text="@string/pengumuman"/>

                    <TextView
                        android:id="@+id/tv_buatpengumuman"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:drawableEnd="@drawable/ic_chevronright"
                        android:layout_below="@+id/tv_pengumuman"
                        android:text="@string/buat_pengumuman"/>
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:elevation="4dp"
                app:cardElevation="5dp"
                app:cardMaxElevation="30dp"
                app:layout_constraintTop_toBottomOf="@+id/cv_4"
                tools:layout_editor_absoluteX="20dp">

                <RelativeLayout
                    android:id="@+id/rl_lainnya"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:id="@+id/tv_lainnya"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:text="@string/lainnya"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_tentang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_lainnya"
                        android:drawableEnd="@drawable/ic_chevronright"
                        android:fontFamily="@font/poppins"
                        android:text="@string/tentang"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_logout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_tentang"
                        android:drawableEnd="@drawable/ic_chevronright"
                        android:fontFamily="@font/poppins"
                        android:text="@string/logout"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/cv_5"
                android:layout_marginTop="20dp"
                tools:layout_editor_absoluteX="20dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>